--- a/code-clone/src/app/app.component.html
+++ b/code-clone/src/app/app.component.html
@@ -317,6 +317,8 @@
 
 <div class="content" role="main">
 
+  <button (click)="deleteAll()">delete everything</button>
+  <br>
   <button (click)="addRandomDataPoint()">click to add random data</button>
 
     <ul>
