--- a/code-clone/src/app/app.component.html
+++ b/code-clone/src/app/app.component.html
@@ -1,76 +1,54 @@
 
 <body>
-<!-- Navigation -->
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light static-top mb-5 shadow">
-  <div class="container">
-    <a class="navbar-brand" href="#">Start Bootstrap</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-            <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
-        </li>
-      </ul>
-    </div>
+
+<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light ">
+  <a class="navbar-brand" href="#">Code Clone Detector</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"  href="/code-analysis">Code Analysis</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/view-feedback-data">View Feedback</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"  href="/view-statistics">View Statistics</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
-<div style="height: 60px"></div>
-<!-- Page Content -->
+
+<div style="height: 10px"></div>
+
+
+
+  <!-- Page Content -->
   <div class="container">
     <div class="card border-0 shadow my-5">
-      <div class="card-body p-5">
+      <div class="card-body p-4">
 
 
 
-          <button (click)="deleteAll()" class="btn btn-danger">Delete Everything</button>
-          &nbsp;
-          <button (click)="addRandomDataPoint()" class="btn btn-outline-primary">Add random data</button>
 
 
-        <table class="table">
-          <thead>
-          <tr>
-            <th scope="col">Clone Type</th>
-            <th scope="col">Rating</th>
-            <th scope="col">Text Feedback</th>
-            <th scope="col">Action</th>
-          </tr>
-          </thead>
-          <tbody>
-          <tr *ngFor="let data of cloneFeedbackList">
-            <td>{{data.getCloneType()}}</td>
-            <td>{{data.getRating()}}</td>
-            <td>{{data.getTextFeedback()}}</td>
-            <td><button (click)="delete(data)" class="btn btn-sm btn-outline-primary">delete this</button></td>
-          </tr>
-          </tbody>
-        </table>
-
-
-
-          <a routerLink="/select-input-mode" class="btn btn-sm btn-primary">Select Input Mode Component</a>
-        &nbsp;
-        <a routerLink="/upload-inputs" class="btn btn-sm btn-primary" >Upload Inputs Component</a>
-
-          <router-outlet></router-outlet>
+        <router-outlet></router-outlet>
 
       </div>
     </div>
   </div>
+<!--  End Page Content-->
+
+
+
+
+
 
 <div style="height: 10px"></div>
 
@@ -82,7 +60,7 @@
 <footer class="page-footer font-small blue">
 
   <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">Created by: Anna Godin, Matt Kelly, Racquel Jones, and Daniel Cherdak
+  <div style="color: gray" class="footer-copyright text-center py-3">Created by: Anna Godin, Matt Kelly, Racquel Jones, and Daniel Cherdak
   </div>
   <!-- Copyright -->
 
