--- a/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
+++ b/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
@@ -5,23 +5,59 @@
 &nbsp;
 <button (click)="deleteAll()" class="btn btn-danger">Delete Everything</button>
 
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource">
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="cloneType">
+      <th mat-header-cell *matHeaderCellDef> Clone Type</th>
+      <td mat-cell *matCellDef="let element"> {{element.cloneType}} </td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="rating">
+      <th mat-header-cell *matHeaderCellDef> Rating </th>
+      <td mat-cell *matCellDef="let element"> {{element.rating}} </td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="textFeedback">
+      <th mat-header-cell *matHeaderCellDef> Text Feedback </th>
+      <td mat-cell *matCellDef="let element"> {{element.textFeedback}} </td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef> Action </th>
+      <td mat-cell *matCellDef="let element">
+        <button (click)="delete(element.id)" class="btn btn-sm btn-outline-primary">Delete</button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator class="mat-paginator-sticky" [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+</div>
 
 
-<table class="table">
-  <thead>
-  <tr>
-    <th scope="col">Clone Type</th>
-    <th scope="col">Rating</th>
-    <th scope="col">Text Feedback</th>
-    <th scope="col">Action</th>
-  </tr>
-  </thead>
-  <tbody>
-  <tr *ngFor="let data of cloneFeedbackList">
-    <td>{{data.getCloneType()}}</td>
-    <td>{{data.getRating()}}</td>
-    <td>{{data.getTextFeedback()}}</td>
-    <td><button (click)="delete(data)" class="btn btn-sm btn-outline-primary">delete this</button></td>
-  </tr>
-  </tbody>
-</table>
+
+<!--<table class="table">-->
+<!--  <thead>-->
+<!--  <tr>-->
+<!--    <th scope="col">Clone Type</th>-->
+<!--    <th scope="col">Rating</th>-->
+<!--    <th scope="col">Text Feedback</th>-->
+<!--    <th scope="col">Action</th>-->
+<!--  </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--  <tr *ngFor="let data of cloneFeedbackList">-->
+<!--    <td>{{data.getCloneType()}}</td>-->
+<!--    <td>{{data.getRating()}}</td>-->
+<!--    <td>{{data.getTextFeedback()}}</td>-->
+<!--    <td><button (click)="delete(data)" class="btn btn-sm btn-outline-primary">delete this</button></td>-->
+<!--  </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
