started structuring passing data between components

--- a/code-clone/src/app/components/code-analysis/code-analysis.component.html
+++ b/code-clone/src/app/components/code-analysis/code-analysis.component.html
@@ -12,25 +12,23 @@
 
 
 
-
-
-<mat-button-toggle-group #group="matButtonToggleGroup">
-  <mat-button-toggle (click)="togglePage(componentOrder.SELECT_INPUT_MODE)" value="left" aria-label="Text align left">
+<mat-button-toggle-group [value]="currentView" #group="matButtonToggleGroup" (change)="onValChange(group.value)">
+  <mat-button-toggle  value="SELECT_INPUT_MODE" (click)="togglePage(componentOrder.SELECT_INPUT_MODE, 'SELECT_INPUT_MODE' )"  aria-label="Text align left">
     SELECT_INPUT_MODE
   </mat-button-toggle>
-  <mat-button-toggle  (click)="togglePage(componentOrder.UPLOAD_INPUTS)"  value="center" aria-label="Text align center">
+  <mat-button-toggle disabled="{{!pageAvailability[componentOrder.UPLOAD_INPUTS]}}" value="UPLOAD_INPUTS" (click)="togglePage(componentOrder.UPLOAD_INPUTS, 'UPLOAD_INPUTS')"   aria-label="Text align center">
     UPLOAD_INPUTS
   </mat-button-toggle>
-  <mat-button-toggle (click)="togglePage(componentOrder.CLONE_RESULTS)"  value="right" aria-label="Text align right">
+  <mat-button-toggle disabled="{{!pageAvailability[componentOrder.CLONE_RESULTS]}}" value="CLONE_RESULTS"  (click)="togglePage(componentOrder.CLONE_RESULTS, 'CLONE_RESULTS')"  aria-label="Text align right">
     CLONE_RESULTS
   </mat-button-toggle>
-  <mat-button-toggle (click)="togglePage(componentOrder.INPUT_FEEDBACK_DATA)"  value="justify" aria-label="Text align justify">
+  <mat-button-toggle disabled="{{!pageAvailability[componentOrder.INPUT_FEEDBACK_DATA]}}" value="INPUT_FEEDBACK_DATA"  (click)="togglePage(componentOrder.INPUT_FEEDBACK_DATA, 'INPUT_FEEDBACK_DATA')"  aria-label="Text align justify">
     INPUT_FEEDBACK_DATA
   </mat-button-toggle>
 </mat-button-toggle-group>
 
 
-<app-select-input-mode *ngIf="pageView[componentOrder.SELECT_INPUT_MODE]"></app-select-input-mode>
-<app-upload-inputs *ngIf="pageView[componentOrder.UPLOAD_INPUTS]"></app-upload-inputs>
-<app-clone-results *ngIf="pageView[componentOrder.CLONE_RESULTS]"></app-clone-results>
-<app-input-feedback-data *ngIf="pageView[componentOrder.INPUT_FEEDBACK_DATA]"></app-input-feedback-data>
+<app-select-input-mode (inputTypeEmitter)="getInputType($event)" [hidden]="!pageView[componentOrder.SELECT_INPUT_MODE]"></app-select-input-mode>
+<app-upload-inputs [inputType]="inputType" [hidden]="!pageView[componentOrder.UPLOAD_INPUTS]"></app-upload-inputs>
+<app-clone-results  [hidden]="!pageView[componentOrder.CLONE_RESULTS]"></app-clone-results>
+<app-input-feedback-data [hidden]="!pageView[componentOrder.INPUT_FEEDBACK_DATA]"></app-input-feedback-data>
