--- a/code-clone/src/app/components/home/home.component.html
+++ b/code-clone/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron jumbotron-fluid vertical-center">
   <div class="container">
     <h1 class="display-4">Welcome to Code Clone Detector!</h1>
-    <p class="lead">This is a tool that helps you determine if two pieces of code are clones of each other</p>
+    <p class="lead">This is a tool that helps you determine if two pieces of code are clones of each other.</p>
   </div>
 </div>
 <div style="text-align: center;">
