--- a/code-clone/src/app/components/code-analysis/select-input-mode/select-input-mode.component.html
+++ b/code-clone/src/app/components/code-analysis/select-input-mode/select-input-mode.component.html
@@ -1,19 +1,28 @@
 <div style="height: 10px"></div>
 
+<p class="lead">Please select a mode of input for the reference code:</p>
 
-<mat-form-field>
-  <mat-label>Reference input type</mat-label>
-  <mat-select [(value)]="referenceCodeType">
-    <mat-option value="{{inputType.SNIPPET}}">Snippet</mat-option>
-    <mat-option value="{{inputType.PROJECT}}">Project</mat-option>
-  </mat-select>
-</mat-form-field>
+<form [formGroup]="form" (ngSubmit)="onSubmit(form.value)">
+  <mat-form-field>
+    <mat-label>Reference input type</mat-label>
+    <mat-select #refInputSelect required  [formControl]="refInputType" [(value)]="referenceCodeType">
+      <mat-option value="{{inputType.SNIPPET}}">Snippet</mat-option>
+      <mat-option value="{{inputType.PROJECT}}">Project</mat-option>
+    </mat-select>
+    <mat-error *ngIf="refInputSelect.errorState">
+      Required field
+    </mat-error>
+  </mat-form-field>
 
-<!--<h4>inputmode: {{referenceCodeType}}</h4>-->
 
 
-<div style="height: 10px"></div>
+  <div style="height: 10px"></div>
+  &nbsp;
+  <button type="submit" class="btn btn-dark" (click)="goToUploadInputs()">Upload Inputs</button>
 
-<button class="btn btn-dark">Cancel</button>
-&nbsp;
-<button class="btn btn-dark" (click)="goToUploadInputs()">Upload Inputs</button>
+</form>
+
+
+
+
+
