--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
@@ -1,1 +1,35 @@
-<p>upload-inputs works!</p>
+<!--<div>Input type: {{refInputType}}</div>-->
+<div style="height: 10px"></div>
+
+<div *ngIf="refInputType==inputType.PROJECT">
+  <p class="lead">Upload an input code snippet and a project from disk</p>
+</div>
+
+
+<div *ngIf="refInputType==inputType.SNIPPET">
+  <p class="lead">Upload two snippets</p>
+<!--  <mat-form-field appearance="fill">-->
+<!--    <mat-label>Textarea</mat-label>-->
+<!--    <textarea matInput></textarea>-->
+<!--  </mat-form-field>-->
+<h3>This will eventually be changed to a rich text editor - monaco editor</h3>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <mat-form-field appearance="fill">
+          <mat-label >Code Input</mat-label>
+          <textarea matInput></textarea>
+        </mat-form-field>
+      </div>
+      <div class="col-sm">
+        <mat-form-field appearance="fill">
+          <mat-label>Code Reference</mat-label>
+          <textarea matInput></textarea>
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
+
+
+</div>
