--- a/code-clone/src/app/components/home/home.component.html
+++ b/code-clone/src/app/components/home/home.component.html
@@ -1,5 +1,14 @@
+<head>
+  <title>Welcome</title>
+</head>
+
+<body>
+
 <div class="jumbotron jumbotron-fluid vertical-center">
   <div class="container">
+    <img style="width: 100px" src="../../assets/code-icon-color.png">
+    <div style="height: 10px"></div>
+
     <h1 class="display-4">Welcome to Code Clone Detector!</h1>
     <p class="lead">This is a tool that helps you determine if two pieces of code are clones of each other.</p>
   </div>
@@ -7,3 +16,5 @@
 <div style="text-align: center;">
   <a class="btn btn-lg btn-primary" href="/code-analysis">Get Started</a>
 </div>
+
+</body>
