--- a/code-clone/src/app/app.component.css
+++ b/code-clone/src/app/app.component.css
@@ -1,10 +1,39 @@
 /* Set a background image by replacing the URL below */
-body {
-  /*background: url('https://www.wpfaster.org/wp-content/uploads/2015/08/wpfaster_code.jpg') no-repeat center center fixed;*/
-  background: url('../assets/code_image_1.png') no-repeat center center fixed;
+/*body {*/
+/*  background: url('../assets/code_image_1.png') no-repeat center fixed;*/
+/*  -webkit-background-size: cover;*/
+/*  -moz-background-size: cover;*/
+/*  background-size: cover;*/
+/*  -o-background-size: cover;*/
+/*  margin-bottom: fill;*/
+/*  max-height: fit-content;*/
+/*}*/
+
+body, html {
+  height: 100%;
+  background-color: #bfbfbf;
+  /*background: url('../assets/code_image_1.png') no-repeat fixed 100%;*/
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
+
 }
+
+body {
+  /*background: url('../assets/code_image_1.png') no-repeat fixed 100%;*/
+  /*background-size: cover;*/
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  -moz-background-size: cover;
+  /*padding-bottom: 10%;*/
+  background-color: #bfbfbf;
+  background-size: cover;
+  height: max-content;
+}
+
+.parallax {
+  padding-bottom: 10px;
+}
+
 
