--- a/code-clone/src/app/components/view-statistics/view-statistics.component.html
+++ b/code-clone/src/app/components/view-statistics/view-statistics.component.html
@@ -1,2 +1,8 @@
 <h1>View Statistics</h1>
 <hr class="my-4">
+
+<div id="chartPieContainer" style="height: 370px; width: 100%; margin-left:auto;margin-right:auto;"></div>
+<div style="height: 50px"></div>
+
+
+<div id="chartBarContainer" style="height: 370px; width: 100%;"></div>
