--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
@@ -9,7 +9,7 @@
 <div *ngIf="refInputType==inputType.SNIPPET">
   <div class="lead"><b>Upload two snippets:</b></div>
 
-  <div class="lead small">The input snippet will be used to search through the reference snippet to determine
+  <div class="lead small">The input snippet will be used to search through the reference snippet. <br> It will determine
     if the input snippet is included anywhere in reference as a clone type 1, 2, 3, or 4
   </div>
 
