--- a/code-clone/src/app/app.component.html
+++ b/code-clone/src/app/app.component.html
@@ -36,7 +36,7 @@
 
   <div class="parallax">
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" style="min-width: max-content">
       <div class="card border-0 shadow my-5">
         <div class="card-body p-4">
 
