--- a/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
+++ b/code-clone/src/app/components/view-feedback-data/view-feedback-data.component.html
@@ -4,8 +4,9 @@
 <button (click)="addRandomDataPoint()" class="btn btn-primary">Add random data</button>
 &nbsp;
 <button (click)="deleteAll()" class="btn btn-danger">Delete Everything</button>
+<div class="divider"></div>
 
-<div class="example-container mat-elevation-z8">
+<div class="example-container mat-elevation-z4">
   <table mat-table [dataSource]="dataSource">
 
     <!-- Position Column -->
