--- a/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
+++ b/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
@@ -12,7 +12,7 @@
           {{"Clone type: " + result.cloneType}}
         </mat-panel-title>
         <mat-panel-description>
-          {{"Input Location: " + result.inputLocation + "\t Reference Location: " + result.inputLocation + "\t Method: " + result.methodName}}
+          <b>Input Location: </b>{{result.inputLocation}}<b> Reference Location: </b>{{result.inputLocation}}<b> Method: </b>{{result.methodName}}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="divider"></div>
