file upload done, clone results still wonky

--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
@@ -4,7 +4,9 @@
 }
 
 .code{
-  max-width: inherit;
-  max-height: 500px;
+  max-width: content-box;
+  /*max-width: 500px;*/
+  max-height: 600px;
+
 }
 
