--- a/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
+++ b/code-clone/src/app/components/code-analysis/upload-inputs/upload-inputs.component.html
@@ -19,7 +19,7 @@
       </div>
       <div class="col-sm">
         <p class="lead">Reference project
-          <mat-icon matTooltip="Only Java files will be parsed and evaluated. Other files will be ignored"
+          <mat-icon matTooltip="Only Java files will be parsed and evaluated. Other files will be ignored."
                     [matTooltipPosition]="position">info
           </mat-icon>
         </p>
