--- a/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
+++ b/code-clone/src/app/components/code-analysis/input-feedback-data/input-feedback-data.component.html
@@ -4,15 +4,14 @@
 
 
 <div *ngIf="!isFeedbackUploaded">
-  <mat-accordion class="example-headers-align">
-
-    <mat-expansion-panel  *ngFor="let result of cloneResults.results; let i = index" [expanded]="step === i" (opened)="setStep(i)" >
+  <mat-accordion [multi]="true" class="example-headers-align">
+    <mat-expansion-panel *ngFor="let result of cloneResults.results; let i = index" [expanded]="step === i" (opened)="setStep(i)" >
       <mat-expansion-panel-header style="background: #d7d7d7">
         <mat-panel-title>
           {{"Clone type: " + result.cloneType}}
         </mat-panel-title>
         <mat-panel-description>
-          <b>Input Location: </b>{{result.inputLocation}}<b> Reference Location: </b>{{result.inputLocation}}<b> Method: </b>{{result.methodName}}
+          <b>Input Location: </b>{{result.inputLocation}}<b> Reference Location: </b>{{result.referenceLocation}}<b> Method: </b>{{result.methodName}}
         </mat-panel-description>
       </mat-expansion-panel-header>
       <div class="divider"></div>
