--- a/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
+++ b/code-clone/src/app/components/code-analysis/clone-results/clone-results.component.css
@@ -13,3 +13,25 @@
 .big-divider {
   height: 60px
 }
+
+
+table {
+  width: 100%;
+}
+
+.make-gold {
+  background-color: lightyellow;
+}
+
+.make-blue{
+  background-color: lightsteelblue;
+}
+
+.make-green{
+  background-color: #a5d8a5;
+}
+
+
+.make-red{
+  background-color: pink;
+}
